--- a/fruitcheck.html
+++ b/fruitcheck.html
@@ -26,7 +26,7 @@
         <![endif]-->
         <section>
             <div class=outer-div>
-                <h1>Andrea's Fruit Checker</h1>
+                <h1>Fruit Checker</h1>
                 <img id='fruit-img'>
                 <form id='form' autocomplete="off">
                     <input id='fruit-input' autocomplete="off" type='text' name='answer' placeholder='Write the fruit'>
